--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,6 @@
   "scripts": {
     "start": "node server.js",
     "start:watch": "./node_modules/nodemon/bin/nodemon.js server.js",
-    "start:docker": "./node_modules/nodemon/bin/nodemon.js /usr/src/app/server.js",
-    "start:docker": "./node_modules/nodemon/bin/nodemon.js server.js"
+    "start:docker": "./node_modules/nodemon/bin/nodemon.js /usr/src/app/server.js"
   }
 }
