--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
             export PATH="$PATH:/home/hnr/.nvm/versions/node/v20.10.0/bin"
             killall node || true # Force return true so exit code is not 1
             yarn install
-            nohup yarn start > nohup.out 2> nohup.err < /dev/null &
+            nohup yarn start > nodemon.out 2> nodemon.err < /dev/null &
             
