--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     }
   ],
   "dependencies": {
+    "dotenv": "^16.3.2",
     "eetase": "^7.0.0",
     "express": "^4.16.3",
     "morgan": "^1.7.0",
