--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,7 @@
     "start": "build && node build/server.js",
     "start:watch": "./node_modules/nodemon/bin/nodemon.js build/server.js",
     "start:docker": "./node_modules/nodemon/bin/nodemon.js /usr/src/app/server.js",
-    "client-connect": "node build/client-test/client-connect.js"
+    "client-connect": "node test/client-connect.js"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
