--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "type": "module",
   "compilerOptions": {
+    "module": "es6",
+    "target": "ES5",
     "outDir": "./build",
     "allowJs": true,
-    "target": "es5",
     "esModuleInterop": true,
+    "moduleResolution": "Node"
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["node_modules"]
