--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ bower_components
 
 # Compiled code (https://nodejs.org/api/addons.html)
 build/
+backend/build/
 
 # Dependency directories
 node_modules/
