--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^4.7.4",
     "socketcluster-client": "^19.1.0",
     "socketcluster-server": "^19.0.1",
+    "stockfish": "^10.0.2",
     "uuid": "^9.0.1"
   },
   "keywords": [
@@ -43,6 +44,7 @@
     "chess": "node test/illegalChess.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
     "socket.io-client": "^4.7.4",
     "typescript": "^5.3.3"
